--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ langchain-server = "langchain.server:main"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 pydantic = "^1"
-SQLAlchemy = ">=1,<3"
+SQLAlchemy = "2.0.4"
 requests = "^2"
 PyYAML = ">=5.4.1"
 numpy = "^1"
@@ -76,7 +76,7 @@ sphinx_rtd_theme = "^1.0.0"
 sphinx-typlog-theme = "^0.8.0"
 sphinx-panels = "^0.6.0"
 toml = "^0.10.2"
-myst-nb = "^0.17.1"
+# myst-nb = "^0.17.1"
 linkchecker = "^10.2.1"
 sphinx-copybutton = "^0.5.1"
 
